Organize 1.21.2 branch and restore sxuuz mod branding (rc.8)